Update feedback link.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <br><br><br><br>
 
-      <a href="http://www.strawpoll.me/12578887" class="btn" target="_blank">Vote on the Design</a>
+      <a href="https://docs.google.com/forms/d/1ERTMrK3SdkkmdYd4SDre6bK-UxYfdc2LyALhocHzqtQ/" class="btn" target="_blank">Enter Feedback</a>
       <div style="clear:both;"></div>
       <br><br><br><br>
 
