Made a few oopsies.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Oblivion by Oblotzky</title>
+    <title>GMK Oblivion by Oblotzky</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://oblotzky.github.io/Oblivion/images/thumbnail.jpg" />
-    <meta property="og:image:url" content="https://oblotzky.github.io/Oblivion/images/thumbnail.jpg" />
-    <meta property="og:title" content="SA Oblivion" />
+    <meta property="og:image" content="https://oblotzky.github.io/gmk-oblivion/images/thumbnail.jpg" />
+    <meta property="og:image:url" content="https://oblotzky.github.io/gmk-oblivion/images/thumbnail.jpg" />
+    <meta property="og:title" content="GMK.Oblivion();" />
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
