--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="main-content">
 
-
+      <p>SA Oblivion is still happening in roughly Q3 2017, don't panic!</p>
 <!-- Description -->
       <h3>Feedback needed!</h3>
       <p>Unlike other GMK sets, I am considering dropping the icons from the legends on the modifier keys, and skipping the secondary legends on the numpad for a more clean look that I believe fits the vision of the Oblivion theme much better. Below you can see both versions, with and without icons to compare. Please take your time comparing them and then click on the link further down and cast your vote on what you prefer. I wish to check with the community what the general reception of this idea is before I make that decision.</p>
