Sunday update. New renders, kits, pricing, info.

--- a/index.html
+++ b/index.html
@@ -29,38 +29,57 @@
 
     <section class="main-content">
 
-      <h3>SA Oblivion is still happening in roughly Q3 2017, don't panic! This is NOT replacing the SA design.</h3>
-      <div style="clear:both;"></div>
-      <br><br><br><br>
-
 <!-- Description -->
-      <h3>Feedback needed!</h3>
-      <p>Unlike other GMK sets, I am considering dropping the icons from the legends on the modifier keys, and skipping the secondary legends on the numpad for a more clean look that I believe fits the vision of the Oblivion theme much better. Below you can see both versions, with and without icons to compare. Please take your time comparing them and then click on the link further down and cast your vote on what you prefer. I wish to check with the community what the general reception of this idea is before I make that decision.</p>
+      <a href="images/gmk_oblivion_keyboard_fullsize_both_top_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_fullsize_both_top_wqhd.jpg"></p></a>
+      <a href="images/gmk_oblivion_keyboard_fullsize_both_side_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_fullsize_both_side_wqhd.jpg"></p></a>
+      <a href="images/gmk_oblivion_keyboard_27_monochrome_top_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_27_monochrome_top_wqhd.jpg"></p></a>
+      <a href="images/gmk_oblivion_keyboard_27_monochrome_side_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_27_monochrome_side_wqhd.jpg"></p></a>
+      <a href="images/gmk_oblivion_keyboard_m65_angled_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_m65_angled_wqhd.jpg"></p></a>
+      <a href="images/gmk_oblivion_keyboard_m65_top_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_m65_top_wqhd.jpg"></p></a>
+
+      <h3>Introduction</h3>
+      <p>GMK Oblivion is a keycap set for mechanical keyboards, designed after the code coloring scheme of the same name created by Paolo Borelli. The keycaps will fit any MX compatible stem.</p>
       <div style="clear:both;"></div>
-      <br><br><br><br>
 
-      <h3>Modifiers WITHOUT icons on legends AND NO secondary legends on Numpad</h3>
-
-      <a href="images/gmk_oblivion_fullsize_topdown_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_fullsize_topdown_wqhd.jpg"></p></a>
-      <a href="images/gmk_oblivion_fullsize_side_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_fullsize_side_wqhd.jpg"></p></a>
+      <p><img src="images/code.png"></p>
       <div style="clear:both;"></div>
-      <br><br><br><br>
 
-      <h3>Modifiers WITH icons on legends AND WITH secondary legends on Numpad</h3>
-      <a href="images/gmk_oblivion_fullsize_topdown_wqhd_iconed.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_fullsize_topdown_wqhd_iconed.jpg"></p></a>
-      <a href="images/gmk_oblivion_fullsize_side_wqhd_iconed.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_fullsize_side_wqhd_iconed.jpg"></p></a>
-
-      <br><br><br><br>
-
-      <a href="https://docs.google.com/forms/d/1ERTMrK3SdkkmdYd4SDre6bK-UxYfdc2LyALhocHzqtQ/" class="btn" target="_blank">Enter Feedback</a>
+      <h3>Cherry profile</h3>
+      <p>With a slightly different shape for each row, the Cherry profile is viewed as the best typing experience among many enthusiasts. If you haven't tried it yet, this is your chance!
+      <p><img src="images/cherry_profile.png"></p>
       <div style="clear:both;"></div>
-      <br><br><br><br>
 
-      <h3>Is there more?</h3>
-      <p>Not right now, but GMK Oblivion is slated to be available in a group buy next month already, April 2017. The kits of this group buy will be revealed very soon after the feedback has been evaluated. A version in SA profile is sheduled for Q3 2017. <a href="https://oblotzky.github.io/Oblivion/" target="_blank">More details here.</a></p>
+      <h3>Material and Colors</h3>
+      <p>All keys are produced by <a href="http://www.gmk-electronic-design.de/en.html" target="_blank">GMK Electronic Design GmbH</a> using durable ABS plastic. The double-shot technique allows the legends to be their own piece of plastic within the key instead of being simply printed on, making fading impossible. The colors used are partially from GMK's own selection, but most will be custom made based on the colors of the SA version of this set.
+      <div style="clear:both;"></div>
+
+      <h3>Base Sets</h3>
+      <p>Each of the base sets totals at 155 keys to cover most keyboards out there, including UK-ISO layout. Ranging from Fullsize, TKL and Winkeyless to 96key, 75%, 65%, 60%, HHKB, Whitefox, Leopold FC660C/FC660M and Clueboard. Probably many more! You'll have the choice between light gray alphas that stand in perfect contrast to their surrounding modifier keys, and white ones if you prefer a higher one.
+      <br>
+      <p>The expected price per base set is 130$.
+      <a href="images/gmk_oblivion_kit_base_oblivion_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_base_oblivion.png"></p></a>
+      <a href="images/gmk_oblivion_kit_base_hagoromo_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_base_hagoromo.png"></p></a>
+      <div style="clear:both;"></div>
+
+      <h3>Monochrome Modifiers Addon</h3>
+      <p>With this addon kit, you will be able to achieve a more classic look as you can replace all of the colored keys with a monochrome alternative.
+      <br>
+      <p>The expected price for this addon kit is 50$.
+      <a href="images/gmk_oblivion_kit_monochrome_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_monochrome.png"></p></a>
+      <div style="clear:both;"></div>
+
+      <h3>Spacebars</h3>
+      <p>To cover a couple more keyboards with split spacebars, or if you prefer a fully modifier colored bottom row, you will have the option to purchase this kit additionally.
+      <br>
+      <p>The expected price for these spacebars is 14$.
+      <a href="images/gmk_oblivion_kit_spacebars_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_spacebars.png"></p></a>
       <div style="clear:both;"></div>
 <!-- Description End -->
 
+<!-- Questions and stuff-->
+      <h3>When and where will the set be available?</h3>
+      <p>The group buy is sheduled for April 2017, with delivery around Q3 2017. The vendor will be announced shortly. If you are more interested in the SA profile, there will be a group buy for that later this year. <a href="https://oblotzky.github.io/Oblivion/" target="_blank">More details here.</a></p>
+      <div style="clear:both;"></div>
 <!-- Questions and stuff End-->
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
