--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <!-- Questions and stuff-->
       <h3>When and where will the set be available?</h3>
-      <p>The group buy is sheduled for April 2017, with delivery around Q3 2017. The vendor will be announced shortly. If you are more interested in the SA profile, there will be a group buy for that later this year. <a href="https://oblotzky.github.io/Oblivion/" target="_blank">More details here.</a></p>
+      <p>The group buy is scheduled for April 2017, with delivery around Q3 2017. The vendor will be announced shortly. If you are more interested in the SA profile, there will be a group buy for that later this year. <a href="https://oblotzky.github.io/Oblivion/" target="_blank">More details here.</a></p>
       <div style="clear:both;"></div>
 <!-- Questions and stuff End-->
 
