--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <section class="main-content">
 
 <!-- Description -->
+      <h3><a href="https://www.keyclack.com/groupbuy/gmkOblivionR1" target="_blank">The Group Buy will go live at 6PM PST!</a></h3>
+
       <a href="images/gmk_oblivion_keyboard_fullsizes_top_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_fullsizes_top_wqhd.jpg"></p></a>
       <a href="images/gmk_oblivion_keyboard_96key_hagoromo_close_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_96key_hagoromo_close_wqhd.jpg"></p></a>
       <a href="images/gmk_oblivion_keyboard_96key_oblivion_top_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_96key_oblivion_top_wqhd.jpg"></p></a>
@@ -55,9 +57,9 @@
       <div style="clear:both;"></div>
 
       <h3>Base Sets</h3>
-      <p>Each of the base sets totals at 155 keys to cover most keyboards out there, including UK-ISO layout. Ranging from Fullsize, TKL and Winkeyless to 96key, 75%, 65%, 60%, HHKB, Whitefox, Leopold FC660C/FC660M and Clueboard. Probably many more! You'll have the choice between light gray alphas that stand in perfect contrast to their surrounding modifier keys, and white ones if you prefer a higher one.
+      <p>Each of the base sets totals at 159 keys to cover most keyboards out there, including UK-ISO layout. Ranging from Fullsize, TKL and Winkeyless to 96key, 75%, 65%, 60%, HHKB, Whitefox, Leopold FC660C/FC660M and Clueboard. Probably many more! You'll have the choice between light gray alphas that stand in perfect contrast to their surrounding modifier keys, and white ones if you prefer a higher one.
       <br>
-      <p>The expected price per base set is 135$.
+      <p>The price per set is 135$, 127$ if more than 500 are sold.
       <a href="images/gmk_oblivion_kit_01_base_oblivion_wqhd_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_01_base_oblivion_wqhd.png"></p></a>
       <a href="images/gmk_oblivion_kit_02_base_hagoromo_wqhd_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_02_base_hagoromo_wqhd.png"></p></a>
       <div style="clear:both;"></div>
@@ -65,21 +67,21 @@
       <h3>Monochrome Modifiers Addon</h3>
       <p>With this addon kit, you will be able to achieve a more classic look as you can replace all of the colored keys with a monochrome alternative.
       <br>
-      <p>The expected price for this addon kit is 50$.
+      <p>The price for this addon kit is 55$, 48$ if more than 250 are sold.
       <a href="images/gmk_oblivion_kit_03_monochrome_modifiers_wqhd_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_03_monochrome_modifiers_wqhd.png"></p></a>
       <div style="clear:both;"></div>
 
       <h3>Spacebars</h3>
       <p>To cover a couple more keyboards with split spacebars, or if you prefer a fully modifier colored bottom row, you will have the option to purchase this kit additionally.
       <br>
-      <p>The expected price for these spacebars is 14$.
+      <p>The for these spacebars is 15$, 13$ if more than 250 are sold.
       <a href="images/gmk_oblivion_kit_04_spacebars_wqhd_bg.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_kit_04_spacebars_wqhd.png"></p></a>
       <div style="clear:both;"></div>
 <!-- Description End -->
 
 <!-- Questions and stuff-->
-      <h3>When and where will the set be available?</h3>
-      <p>The group buy is scheduled for April 2017, with delivery around Q3 2017. The vendor will be announced shortly. If you are more interested in the SA profile, there will be a group buy for that later this year. <a href="https://oblotzky.github.io/Oblivion/" target="_blank">More details here.</a></p>
+      <h3>Where is the keyset available?</h3>
+      <p><a href="https://www.keyclack.com/groupbuy/gmkOblivionR1" target="_blank">The group buy is about to go live on KeyClack.com</a>, with delivery around Q3 2017. The vendor will be announced shortly. If you are more interested in the SA profile, there will be a group buy for that later this year. <a href="https://oblotzky.github.io/Oblivion/" target="_blank">More details here.</a></p>
       <div style="clear:both;"></div>
 <!-- Questions and stuff End-->
 
