--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="main-content">
 
 <!-- Description -->
-      <h3><a href="https://www.keyclack.com/groupbuy/gmkOblivionR1" target="_blank">The Group Buy is currently Live on KeyClack.com!</a></h3>
+      <h3><a href="https://www.keyclack.com/groupbuy/gmkOblivionR1" target="_blank">The Group Buy concluded on KeyClack.com and the set will soon be shipping out to all participants!</a></h3>
       <div style="clear:both;"></div>
       <a href="images/gmk_oblivion_keyboard_fullsizes_top_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_fullsizes_top_wqhd.jpg"></p></a>
       <a href="images/gmk_oblivion_keyboard_96key_hagoromo_close_wqhd.jpg" data-featherlight="image"><p><img src="images/gmk_oblivion_keyboard_96key_hagoromo_close_wqhd.jpg"></p></a>
